# Hosts-File-URL-Blocker

./: CMakeLists.txt  README.md  hostblocker.cpp  hostblocker.h  hostblocker.ui  hostsblocker.cpp  hostsblocker.h  hostsblocker.ui  main.cpp  resources.qrc
URL Lists/: EasyListAds.txt  MaliciousURLs.txt  OneLaunch.txt  Ransomware.txt  Scam Sites.txt
